--- a/src/app/registry/registry.component.html
+++ b/src/app/registry/registry.component.html
@@ -1,10 +1,18 @@
 <h3>Registries</h3>
 <div class="grid grid-pad">
   <a *ngFor="let registry of registries" class="col-1-4">
-    <div class="module registry">
+    <div class="module registry"
+    [class.selected]="registry === selectedRegistry" 
+    (click)="onSelect(registry)">
         <h4>Kezdés: {{registry.startdate}}</h4>
         <h4>Vége: {{registry.enddate}}</h4>
         <h4>Megjegyzés: {{registry.description}}</h4>
     </div>
   </a>
 </div>
+
+<app-registry-details [registry] = selectedRegistry></app-registry-details>
+
+<h2>New registry!</h2>
+
+<button (click) = "newRegistry()">Submit</button>
