--- a/src/app/team/team.component.html
+++ b/src/app/team/team.component.html
@@ -8,7 +8,7 @@
 </ul>
 
 <div *ngIf = "selectedTeam">
-  <h3>Teammates of {{selectedTeam.name}}</h3>
+  <h3>Teammates of {{selectedTeam.team_name}}</h3>
   <ul class = "teams">
     <li *ngFor="let teammate of teammates" >
       <span>{{teammate.name}}, {{teammate.position}}</span>  
