can create team

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,3 @@
 <h1> Welcome to Stakhanov working hours registry! </h1>
+
+<img src="https://upload.wikimedia.org/wikipedia/commons/f/f1/Stakhanov.JPG" alt="Alexej Sztahanov" width="50%" height="50%">
