--- a/src/app/team/team.component.html
+++ b/src/app/team/team.component.html
@@ -19,4 +19,5 @@
       <span>{{teammate.name}}, {{teammate.position}}</span>  
     </li>
   </ul>
+  <button mat-flat-button (click) = "addUser()">Join Team!</button>
 </div>
