--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,6 +23,10 @@
             My registries
         </button>
 
+        <button mat-button class="toolbar-button" (click) = "logout()">
+            Logout
+        </button>
+
         <span class="fill-remaining-space" fxHide="false" fxHide.gt-sm></span>
 
     </mat-toolbar>
