--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,3 +1,5 @@
 <h1> Welcome to Stakhanov working hours registry! </h1>
 
+<h2> What would you like to do today, {{user.fullname}}? </h2>
+
 <img src="https://upload.wikimedia.org/wikipedia/commons/f/f1/Stakhanov.JPG" alt="Alexej Sztahanov" width="50%" height="50%">
