--- a/src/app/registry-details/registry-details.component.html
+++ b/src/app/registry-details/registry-details.component.html
@@ -1,4 +1,4 @@
 <div *ngIf="registry">
   <h4>Delete registry (ID: {{registry.id}})</h4>
-  <button mat-flat-button (click)="submitChanges()"> Delete </button>
+  <button mat-flat-button color="primary" (click)="submitChanges()"> Delete </button>
 </div>
